--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        
+        <!-- ________ jahess150 Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Josh Hess</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/joshua-hess-5748b8173/" target="_blank">Joshua Hess</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jahess150" target="_blank">jahess150</a>
+          </p>
+          <p class="about">I'm a former high school math teacher and an aspiring web developer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://projecteuler.net/" target="_blank" title="Project Euler">Project Euler</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
