--- a/index.html
+++ b/index.html
@@ -123,6 +123,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+                <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+                <div class="card">
+                  <p class="name">Vernell C.</p>
+                  <p class="contact">
+                    <i class="fab fa-x-twitter"></i>
+                    <a href="https://x.com/Dev_Vernell" target="_blank">Dev_Vernell</a>
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/VCGithubCode" target="_blank">VCGithubCode</a>
+                  </p>
+                  <p class="about">I like making music and building things.</p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://devpost.com/" target="_blank" title="Hackathons">Devpost</a>
+                      </li>
+                      <li>
+                        <a href="https://excalidraw.com/" target="_blank" title="Diagram board">Excalidraw</a>
+                      </li>
+                      <li>
+                        <a href="https://threejs.org/" target="_blank" title="3d javascript">Three.js</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ Gl1tchblade card START ________  -->
         <div class="card">
           <p class="name">Gl1tchblade</p>
