--- a/index.html
+++ b/index.html
@@ -111,6 +111,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+                      <!-- ________ dsg753 card START ________  -->
+        <div class="card">
+          <p class="name">dsg753</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/dsg753" target="_blank">dsg753</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dsg753" target="_blank">dsg753</a>
+          </p>
+          <p class="about">My name is George and i love coding</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="https://web.dev/">Web.dev</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="https://css-tricks.com/">CSS-Tricks</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="https://caniuse.com/">web development</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+                 <!-- ________ dsg753 card END ________  -->
+
         <!-- ________ irsyad212 card START ________  -->
         <div class="card">
           <p class="name">Irsyad</p>
