--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        
+        <!-- ________ gabriel04alves's card START ________  -->
+        <div class="card">
+          <p class="name">Gabriel Alves</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/gabriel04alves" target="_blank">Gabriel Alves</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/gabriel04alves" target="_blank">gabriel04alves</a>
+          </p>
+          <p class="about">I am currently a student of Information Systems and have already graduated as a Computer Technician. I study technology daily with the goal of becoming a software developer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.duolingo.com/" target="_blank" title="Duolingo">Duolingo</a> - A platform to help you learn a new language.
+              </li>
+              <li>
+                <a href="https://monkeytype.com/" target="_blank" title="Monkeytype">Monkeytype</a> - A tool to improve your typing speed and accuracy.
+              </li>
+              <li>
+                <a href="https://judge.beecrowd.com/" target="_blank" title="beecrowd">beecrowd</a> - A website to enhance your programming logic through coding challenges.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ gabriel04alves's card END ________  -->
 
         <!-- ________ irsyad212 card START ________  -->
         <div class="card">
