--- a/index.html
+++ b/index.html
@@ -110,7 +110,35 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shreeshailgouda Patil</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Shreesh72824843?s=09" target="_blank">Shreesh72824843</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Shreeshailgoudapatil" target="_blank">Shreeshail</a>
+          </p>
+          <p class="about">Hii i have completed my B.E in Electronics and communication.I would love to code in Python,javascript,C++.Passionate about upcoming Software develoment.with continous update to with trending skills</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://takeuforward.org/strivers-a2z-dsa-course/strivers-a2z-dsa-course-sheet-2/" target="_blank" title="First Resource">A-Z DSA</a>
+              </li>
+              <li>
+                <a href="https://cssgradient.io/" target="_blank" title="Second Resource">CSS</a>
+              </li>
+              <li>
+                <a href="https://www.sqlzoo.net/wiki/SELECT_from_WORLD_Tutorial" target="_blank" title="Third resource">SQl</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ gabriel04alves's card START ________  -->
         <div class="card">
           <p class="name">Gabriel Alves</p>
