--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+
+        <div class="card">
+          <p class="name">Aseel Ahmed</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/ahmedatpeak" target="_blank">@ahmedatpeak</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/coolfrank123" target="">coolfrank123</a>
+          </p>
+          <p class="about">Introverted. New to coding. On my way to beoome a full stack developer from a footwear manufacturer. Looking forward to meet great people here.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://mimo.org" target="_blank" title="First Resource">Great Resource to learn HTML, CSS, Javascript for front end and react express and SQL for backend.</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=uffh3AmSvoY" target="_blank" title="Second Resource">Apna college 1</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=FKVf1E78Wb8" target="_blank" title="Third resource">Apna college 2</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        
         
         <!-- ________ gabriel04alves's card START ________  -->
         <div class="card">
