--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,30 @@
           </div>
         </div>
         <!-- ========= Card 11 END =========  -->
+        <div class="card">
+          <p class="name">Flipping cards</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Gomatii" target="_blank">Gmt</a>
+          </p>
+          <p class="about">I'm a software engineer with a passion for web development and ML.</p>
+          <div class="resources">
+            
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/frontend" target="_blank" title="First Resource"> Frontend Developer Roadmap </a>
+              </li>
 
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="CSS-Tricks">CSS Tricks</a>
+              </li>
+              <li>
+                <a href="https://w3schools.com/" target="_blank" title="W3schools">W3 schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
