--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Samy</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/unshreif" target="_blank">unshreif</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/unshreif" target="_blank">unshreif</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Hello, iam Muhmd Samy, an egyptian frontend developer</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN">MDN</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://v2.scrimba.com/home" target="_blank" title="Scrimba">Scrimba</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://github.com/education" target="_blank" title="github education">Github Education</a>
               </li>
             </ul>
           </div>
