--- a/index.html
+++ b/index.html
@@ -110,7 +110,35 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+
+        <!-- ________ Pauleena's card START ________  -->
+        <div class="card">
+          <p class="name">Pauleena</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/pauleena-phan " target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/pauleenaphan" target="_blank">Your handle</a>
+          </p>
+          <p class="about">I recently graduated in May and am actively seeking full-time opportunities. I have a passion for web development 
+            and am continuously improving my skills. This is my first contribution to an open-source project on GitHub</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="First Resource">Odin Project - A free web development course that has an amazing community </a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Second Resource">MDN is a great website offering extensive documentation on essential web development technologies </a>
+              </li>
+              <li>
+                <a href="https://coolors.co/" target="_blank" title="Third resource">Coolors - A color palette generator that can help choose colors for your website </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Pauleena's card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
