--- a/index.html
+++ b/index.html
@@ -110,7 +110,41 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+
+        <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
+        <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
+        <!-- ================================================ -->
+
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+        <!-- Keep one line of space above and below your card -->
+        <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ ThulaniMthembu card START ________  -->
+        <div class="card">
+          <p class="name">Thulani Mthembu</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mthembu-thulani-6a2361115/" target="_blank">Mthembu Thulani</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ThulaniMthembu" target="_blank">@ThulaniMthembu</a>
+          </p>
+          <p class="about">As a web developer with expertise in React, Sass (SCSS), and Bootstrap, I specialize in creating responsive and interactive web applications. I am passionate about leveraging modern technologies to deliver exceptional user experiences and continuously enhance my skills through diverse learning methods and staying updated with industry trends</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://uiverse.io/" target="_blank" title="First Resource">Universe.io</a>
+              </li>
+              <li>
+                <a href="https://www.firsttimersonly.com/" target="_blank" title="Second Resource">First Timers Only</a>
+              </li>
+              <li>
+                <a href="https://devpost.com/software/built-with/javascript" target="_blank" title="Third resource">Devpost</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *ThulaniMthembu's* card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
