--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ Legion's card START ________  -->
+         <div class="card">
+          <p class="name">Shivendra singh chandel</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/shiv8cookie" target="_blank">shiv8cookie</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Legionxoxo" target="_blank">Legionxoxo</a>
+          </p>
+          <p class="about">As a 3rd-year computer science student, I am diving deep into full stack development with a focus on Next.js. I am passionate about creating dynamic web applications and exploring new technologies.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://w3schools.com/" target="_blank" title="First Resource">Learn any Programming language </a>
+              </li>
+              <li>
+                <a href="https://readme.so/editor" target="_blank" title="Second Resource">Readme file editor</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/learn" target="_blank" title="Third resource">Freecodecamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Legion's card END ________  -->
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
