--- a/index.html
+++ b/index.html
@@ -812,6 +812,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ JOLLYJOLLI'S CARD START ________  -->
+        <div class="card">
+          <p class="name">Jolly Jolli</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/kuikilod" target="_blank">kuikilod</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jollyjolli" target="_blank">Jollyjolli</a>
+          </p>
+          <p class="about">I love to code, it makes me happy! 💖</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://github.com" target="_blank" title="GitHub">GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ JOLLYJOLLI's CARD END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Mohamad</p>
